examples/test/testpolicy3538.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3538
  namespace: namespace158
spec:
  podSelector:
    matchLabels:
      key37: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value6
          key3: value14
          key4: value35
      podSelector:
        matchLabels:
          key18: value38
          key17: value35
